<?xml version="1.0"?>

<package format="2">

  <name>qpmad</name>
  <version>1.1.2</version>
  <description>qpmad QP solver</description>

  <license>Apache 2.0</license>

  <author email="asherikov@yandex.com">Alexander Sherikov</author>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>

  <url type="website">https://github.com/asherikov/qpmad</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>

  <test_depend>cmake_code_coverage</test_depend>
  <test_depend>gtest</test_depend>
  
</package>
